# SAGE-Engine

./: .cibuildwheel.toml  .gitignore  .gitmodules  .no_external_formats  .pre-commit-config.yaml  AGENTS.md  AUDIT_AND_CHANGES.md  AUDIT_REPORT.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  LICENSE  Makefile  PUBLICATION_COMPLETE.md  PUBLICATION_READY.md  QUALITY_SCORECARD.md  QUICK_START.md  README.md  README_MULTILANG.md  RELEASE_NOTES.md  RISK_REGISTER.md  ROADMAP.md  SAGE_ALPHA_1.0_checklist.md  SAGE_Engine_Post.docx  SAGE_Engine_Post.md  STRUCTURE_DIFF.md  TERMS_MIGRATION.md  audit_findings.md  audit_report.md  benchmark.md  bootstrap.py  build-game.bat  build-game.ps1  build-release.bat  build.ps1  cli_config.json  commit_msg_template.txt  (+35 more)
Editor/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  AssetBrowserPanel_FileOps.cpp  CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  EditorBridge.cpp  EditorBridge.h  EditorConfig.cpp  EditorConfig.h  EditorScene.cpp  EditorScene.h  EditorSceneWrapper.h  EditorUtils.h  FileUtils.h  GameWindow.cpp  GameWindow.h  HierarchyPanel.cpp  HierarchyPanel.h  ImageViewerWindow.cpp  ImageViewerWindow.h  InspectorPanel.cpp  InspectorPanel.h  Localization.cpp  Localization.h  Project.cpp  Project.h  SelectionContext.h  Viewport.cpp  Viewport.h  ViewportSelection.cpp  main.cpp
Editor/Notifications/: NotificationBus.cpp  NotificationBus.h
Editor/Undo/: EditorCommands.h
Engine/: CMakeLists.txt  SAGE.h  Version.h.in
Engine/AI/: AIBlackboard.h  BehaviorNodes.h  BehaviorTree.h  Pathfinder.cpp  Pathfinder.h  Perception.cpp  Perception.h  SteeringBehaviors.cpp  SteeringBehaviors.h
Engine/Application/: EngineContext.cpp  EngineContext.h
Engine/Audio/: AudioSystem.cpp  AudioSystem.h  MusicSystem.cpp  MusicSystem.h  Sound.cpp  Sound.h
Engine/Core/: AchievementSystem.cpp  AchievementSystem.h  Application.cpp  Application.h  Color.h  Config.h  CoordinateSystems.h  Core.h  CrashHandler.h  EngineConfig.cpp  EngineConfig.h  EnhancedFSM.h  Event.h  EventBus.cpp  EventBus.h  FileLogger.h  FileSystem.h  GameObject.cpp  GameObject.h  GameObjectPools.h  GameUtility.cpp  GameUtility.h  IResource.h  JobSystem.h  LocalizationManager.h  LocalizationManager_V2.h  LocalizationSystem.cpp  LocalizationSystem.h  Log.h  Logger.cpp  Logger.h  ObjectPool.h  PerformanceProfiler.h  PlatformUTF8.cpp  PlatformUTF8.h  ProceduralGeneration.cpp  ProceduralGeneration.h  Profiler.cpp  Profiler.h  ProgressionSystem.cpp  (+30 more)
Engine/Debug/: Console.cpp  Console.h  DebugShortcuts.h  ImGuiLayer.cpp  ImGuiLayer.h  MemoryProfiler.h  Profiler.cpp  Profiler.h  SceneHierarchy.cpp  SceneHierarchy.h  StructuredLogger.h  TilemapEditor.cpp  TilemapEditor.h
Engine/Dialogue/: DialogueManager.h  DialogueNode.h  DialogueRunner.h  DialogueTree.h
Engine/ECS/: ArchetypeStorage.h  ChunkedStorage.h  ComponentArray.h  ComponentPool.h  ComponentTypeID.h  CoreSystem.h  ECS.h  ECSContext.h  Entity.h  EntityFactory.h  GameObjectECSBridge.h  MemoryPool.h  Registry.h  System.h  VectorMath.h
Engine/Graphics/: Color.h  DayNightCycle.cpp  DayNightCycle.h  Font.cpp  Font.h  FrustumCuller2D.cpp  FrustumCuller2D.h  GLDebug.cpp  GLDebug.h  GraphicsResourceManager.cpp  GraphicsResourceManager.h  LOD2DSystem.h  LODSystem.h  Material.cpp  Material.h  MathTypes.h  NineSlice.cpp  NineSlice.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  RendererTypes.h  ScreenEffects.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TrailSystem.h
Engine/Input/: ActionContext.cpp  ActionContext.h  GamepadButtons.h  IWindow.cpp  IWindow.h  Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputBindings.cpp  InputBindings.h  InputBridge.cpp  InputBridge.h  InputBuffer.cpp  InputBuffer.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  InputMap.cpp  InputMap.h  KeyCodes.h  MouseButtons.h
Engine/Inventory/: CraftingSystem.h  EquipmentManager.h  Inventory.h  Item.h  ItemDatabase.h
Engine/Math/: CameraUtils.h  Constants.h  Math.h  Matrix4.cpp  Matrix4.h  Random.cpp  Random.h  Vector2.cpp  Vector2.h  Vector3.h  VectorSIMD.h
Engine/Memory/: Ref.h
Engine/Modding/: ModInfo.cpp  ModInfo.h  ModManager.cpp  ModManager.h  ModScriptBindings.cpp  ModScriptBindings.h  ModScriptBindingsStub.cpp
Engine/Physics/: Box2DBackend.cpp  Box2DBackend.h  IPhysicsBackend.h  PhysicsContact.h  PhysicsSystem.cpp  PhysicsSystem.h
Examples/: AnimationDemo.cpp  Box2DPhysicsDemo.cpp  CMakeLists.txt  CatAnimationDemo.cpp  CursorAndUIDemo.cpp  LogConDemo.cpp  MusicSystem.lua  MusicSystemExample.cpp  NineSliceExample.cpp  OptimizationSystemsExample.cpp  ParticleSystemDemo.cpp  ParticleSystemSimpleDemo.cpp  PathDemo.cpp  PhysicsDemo.cpp  PhysicsSandbox.cpp  PlayerInventoryDemo.cpp  PluginDemo.cpp  README.md  README_TestGame.md  RPGSystemsDemo.cpp  SceneDemo.cpp  ScreenEffects.lua  ScreenEffectsExample.cpp  ScriptingDemo.cpp  ShapesAndParticlesDemo.cpp  SingleSquareDemo.cpp  TMXDemo.cpp  TextDemo.cpp  TicTacToe.cpp  TilemapDemo.cpp  TilemapLoaderExample.cpp  TilemapOrientationsDemo.cpp  UIDemo.cpp  UISystemTest.cpp  UISystemTestNew.cpp  UtilitySystemsExample.cpp
Sandbox/: CMakeLists.txt
Tests/: CMakeLists.txt  Camera2DTests.cpp  CoreSystemsTests.cpp  ECSSystemsTests.cpp  ECSTests.cpp  EditorBasicTests.cpp  EngineIntegrationTest.cpp  FileSystemTests.cpp  GameObjectTests.cpp  InputBindingsTests.cpp  InputTests.cpp  IntegrationTests.cpp  MaterialTests.cpp  MathRandomTests.cpp  MathTests.cpp  Matrix4Tests.cpp  OpenGLStub.h  OpenGLTestContext.h  PNGLoaderTests.cpp  ParticleEmitterTests.cpp  ParticleSystemTests.cpp  PerformanceBenchmarks.cpp  PhysicsTests.cpp  PluginManagerTests.cpp  ProfilerTests.cpp  QuadTreeTests.cpp  README.md  RPGSystemsTests.h  RendererSmokeTests.cpp  RendererStatsTests.cpp  RendererTests.cpp  ResourceManagerTests.cpp  ResourceTests.cpp  SceneSerializerTests.cpp  ScriptableUITests.cpp  ShaderBasicTests.cpp  ShaderTests.cpp  SpriteTests.cpp  SpritesheetAnalysisTests.cpp  SpritesheetTests.cpp  (+18 more)
(+2273 files in other folders)
