[tool.poetry]
name = "sage_engine"
version = "0.1.0"
description = "SAGE Engine core skeleton"
authors = ["Auto"]

[tool.poetry.dependencies]
python = "^3.11"
hypothesis = "*"
pytest = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sage-test = "sage_testing.runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
