[tool.poetry]
name = "sage_engine"
version = "0.1.0"
description = "SAGE Engine core skeleton"
authors = ["Auto"]

[tool.poetry.dependencies]
python = "^3.11"
hypothesis = "*"
pytest = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sage-test = "sage_engine.testing.runner:main"
sage-config = "sage_engine.devtools.config_cli:main"
sage = "sage_engine.devtools.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
