[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-engine-core"
version = "0.1.0"
description = "SAGE Engine core - minimal plugin-first game engine core"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="SAGE Engine Team"}]
license = {text="MIT"}

[tool.cibuildwheel]
# default settings; override in release workflow if needed

[tool.setuptools.packages.find]
where = ["."]
include = ["sagecli","sagecore*","plugins*","scripts"]

[project.scripts]
sage-password = "sagecli.password_cli:main"
sage-plugin-ui = "sagecli.plugin_ui:main"
sage-install-plugin = "sagecli.install_plugin:main"
