cmake_minimum_required(VERSION 3.20)

# Examples directory
# Add all example projects here

# Simple Game - Demonstrates basic game structure, physics, input, and rendering
add_subdirectory(SimpleGame)

# Pong Test - Tests core engine features: rendering, input, collision, game loop
add_subdirectory(PongTest)

# Future examples:
# add_subdirectory(PhysicsDemo)
# add_subdirectory(UIExample)
# add_subdirectory(AudioDemo)
# add_subdirectory(ParticleEffects)
